# bug_bot

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  base_design_idea.txt  bug_bot_tech_doc.md  docker-compose.yml  on-call.txt  pyproject.toml
alembic/: env.py
alembic/versions/: 2458617ad8e0_add_investigation_fields_and_indexes.py  2c69dddceea8_add_db_fields_to_service_team_mapping.py  60b46cd533cf_merge_heads.py  65b225a8d12a_merge_heads.py  7d4399b0b6d6_merge_heads.py  9dfeb93f9938_add_claude_session_id_to_investigations.py  a1b2c3d4e5f6_upgrade_rag_hybrid_search.py  a1f3c7b2d905_add_assignee_user_id_to_bug_reports.py  a3b7c9e1f402_add_bug_conversations_table.py  a9f2e1d3b047_add_service_description.py  b1c2d3e4f5a6_merge_heads.py  b55e9dba7821_merge_heads.py  b5d2e8f1a390_add_attachments_to_bug_reports.py  bc8d3cca9ff7_merge_heads.py  c28a75e9da65_initial_tables.py  c2d3e4f5a6b7_add_oncall_overrides.py  (+10 more)
docs/: oncall_tables.md  rag-changes.md
plans/: audit_logs_plan.md  auto_close_stale_bugs_plan.md  conversation_logs.md  cosmic-knitting-parrot.md  dev_take_over_plan.md  mention_gated_slack_handler_plan.md  multi_pr_worflow_plan.md  nested-coalescing-backus.md  oncall_mgmt_revamp_plan.md  oncall_prd_plan.md  oncall_rotation_job_plan.md  rate_limit_and_duplicate_plan.md  report_finding_tool_plan.md  workflow_improvement_plan.md
scripts/: migrate_oncall_history_to_audit_logs.py  seed_service_mapping.py
skills/: database_investigation.md  dotnet_debugging.md  logs_reading.md  plan.md  pr_execution.md  rails_debugging.md  service_team_fetching.md
(+50 files in other folders)
